public/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
}

/** LOGIN PAGE **/

/* parent container */
.parent-registration {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    height: 100vh;
    width: 100vw;
    box-sizing: border-box;
}

/* left section */
.logo {
    width: 600px;
    height: 600px;
}

/* right section */
.rightSide {
    background-color: #9B112E;
    border-radius: 20px;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
    overflow: hidden;
    padding: 5%;
    box-sizing: border-box;
    width: 550px;
    max-height: 90%;
}

.rightSide p{
    color: #eee;
}

.main, .details, .signup-page {
    text-align: center;
    margin: 15px;
}

.main {
    font-family: "Hammersmith One", sans-serif;
    font-size: 32px; 
}

.details {
    font-size: 16px; 
}

/* form styling */
.form-group {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 2vh;
    position: relative;
    font-size: 1vw; 
}

.form-group input[type="text"], 
.form-group input[type="password"] {
    width: 100%;
    padding: 1vh;
    background-color: #9B112E;
    border: none;
    border-bottom: 2px solid white;
    outline: none;
    font-size: 1vw;
}

.form-group input[type="text"]::placeholder,
.form-group input[type="password"]::placeholder {
    color: white;
    font-weight: bold;
    font-size: 18px;
    position: absolute;
}

/* checkbox */
.miniform-group {
    display: flex;
    align-content: center;
}

label{
    /* use different color */
    margin-left: 4px;
    font-size: 16px;
}

.checkmark {
    height: 2vh;
    width: 2vh;
    background-color: #fff;
    border: 2px solid #ccc;
    border-radius: 3px;
    margin-right: 1vh;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

/* a links */
.register {
    color: white;  
    font-weight: 600; 
}

.forgot-page{
    font-size: 16px;
}

/* submit button */
.registration {
    display: block;
    width: 100%;
    padding: 15px;
    border: none;
    border-radius: 5px;
    background-color: white;
    color: #9B112E;
    border: 3px solid white;
    font-size: 18px; 
    font-weight: bold;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.registration:hover {
    background-color: #9B112E;
    color: white;
    border: 3px solid white;
}

/* SIDEBAR */
.sidebar{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 80px;
    background-color: #9B112E;
    padding: 0.4rem 0.8rem;
    transition: all 0.5s ease;
    z-index: 1000;
}

.sidebar.active ~ .main-content{
    left: 250px;
    width: calc(100% - 250px);
}

.sidebar.active{
    width: 250px;
}

#btn{
    position: absolute;
    color: #fff;
    top: 0.4rem;
    left: 50%;
    font-size: 1.2rem;
    line-height: 50px;
    transform: translateX(-50%);
    cursor: pointer;
}

.sidebar.active #btn{
    left: 90%;
}

.sidebar .top .logo{
    color: #fff;
    display: flex;
    height: 50px;
    width: 100%;
    align-items: center;
    pointer-events: none;
    opacity: 0;
}

.sidebar.active .top .logo{
    opacity: 1;
}

#logo-mini{
    width: 50px;
}

.top .logo i {
    font-size: 2rem;
    margin-right: 5px;
}

.sidebar p{
    opacity: 0;
}

.sidebar.active p{
    opacity: 1;
}

.sidebar ul li{
    position: relative;
    list-style-type: none;
    height: 50px;
    width: 90%;
    margin: 0.8rem auto;
    line-height: 50px;
    white-space: nowrap;
    z-index: 1;
}

.sidebar ul li.active{
    background: #F6AA26;
    border-radius: 50px;
}

.sidebar ul li a{
    color: #fff;
    display: flex;
    align-items: center;
    text-decoration: none;
    border-radius: 0.8rem;
}

.sidebar ul li a:hover{
    background-color: #fff;
    color: #181D31;
}

.sidebar ul li a i{
    min-width: 50px;
    text-align: center;
    height: 50px;
    border-radius: 12px;
    line-height: 50px;
}

.sidebar .nav-item, .sidebar .div{
    opacity: 0;
}

.sidebar.active .nav-item, .sidebar.active .div{
    opacity: 1;
}

.sidebar ul li .tooltip {
    position: absolute;
    left: calc(100% + 10px); 
    top: 50%;
    transform: translateY(-50%);
    box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.2);
    border-radius: 0.6rem;
    padding: 0.4rem 1.2rem;
    line-height: 1.8rem;
    visibility: hidden;
    white-space: nowrap;
    background-color: black; 
    color: white;
}

.sidebar ul li:hover .tooltip {
    visibility: visible;
}

.sidebar.active ul li .tooltip{
    display: none;
}

/* USER INFO AT THE SIDEBAR */
.user{
    display: flex;
    margin-top: auto;
    align-items: center;
    margin: 1rem 0;
}

.user p{
    color: #fff;
    opacity: 1;
    margin-left: 1rem;
}

.user-img{
    width: 50px;
    border-radius: 100%;
    border: 2px solid white;
}

.bold{
    font-weight: 600;
}


/** DASHBOARD PAGE **/
.main-content{
    position: relative;
    background-color: #eee;
    min-height: 100vh;
    top: 0;
    left: 80px;
    transform: all 0.5s ease;
    width: calc(100% - 80px);
    padding: 1rem;
}

/* filter */
.filter{
    display: flex;
    justify-content: flex-end;
}

.monthly, .yearly{
    border: 2px solid black;
    border-radius: 50px;
    margin: 10px;
    padding: 8px;
    position: relative;
}

.filter div {
    cursor: pointer;
}

/* container */
.container {
    display: grid;
    grid-template-rows: repeat(4, 350px); 
    grid-template-columns: repeat(8, 1fr); 
    gap: 20px; 
}

/* grid items */
.graph1, .graph2, .graph3, .graph4, .graph5, .graph6 {
    background-color: #fff;
    padding: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.graph1 {
    grid-row: 1 / 3;
    grid-column: 1 / 6;
}

.graph2 {
    grid-row: 3 / 5;
    grid-column: 1 / 6;
}

.graph3 {
    grid-row: 1 / 2;
    grid-column: 6 / 9;
}

.graph4 {
    grid-row: 2 / 3;
    grid-column: 6 / 9;
}

.graph5 {
    grid-row: 3 / 4;
    grid-column: 6 / 9;
}

.graph6 {
    grid-row: 4 / 5;
    grid-column: 6 / 9;
}

/* statistics */
.statistics {
    display: grid;
    grid-template-rows: 200px; 
    grid-template-columns: repeat(6, 1fr); 
    gap: 20px; 
    margin-bottom: 20px;
}

.total, .positive, .negative{
    display: flex;
    justify-content: space-around;
    align-items: center;
    border-radius: 5px;
    padding: 2%;
}

.total{
    background-color: #FBFFE0;
    grid-row: 1 / 1;
    grid-column: 1 / 3;
}

.positive{
    background-color: #E2FFED;
    grid-row: 1 / 1;
    grid-column: 3 / 5;
}

.negative{
    background-color: #FFEFEF;
    grid-row: 1 / 1;
    grid-column: 5 / 7;
}

.stats-title{
    font-size: 24px;
    font-weight: 600;
}

.number{
    font-size: 28px;
}

#icon-stats{
    font-size: 80px;
}

/* graphs */
.reason{
    font-family: "Hammersmith One", sans-serif;
    font-size: 20px;
}

/* For data tracker */
.data-label {
    width: 500px;
    justify-content: center;
    font-size: 30px;
    display: block;
    margin-bottom: 5px;
    font-weight: bold;
}

.data-input {
    width: 600px;
    height: 40px;
    padding: 5px;
    margin-left: 50px;
    margin-bottom: 10px;
    border: 1px solid #ccc;
    background-color: #f9f9f9;
    font-size: 15px;
}

select {
    width: 600px;
    height: 40px;
    padding: 5px;
    margin-left: 50px;
    margin-bottom: 10px;
    border: 1px solid #ccc;
    background-color: #f9f9f9;
    font-size: 15px;
}

select:focus {
    outline: none;
    border-color: #6cb2eb;
    box-shadow: 0 0 5px rgba(108, 178, 235, 0.5);
}

/* Container for data tracker */
.container-for-tracker {
    width: 1400px; 
    height: 640px; 
    background-color: #fca3a3; 
    display: flex;
    justify-content: left;
    flex-direction: column;
    align-items: center;
    border-radius: 20px;
}

.container-for-fields {
    display: flex;
    justify-content: left;
    flex-direction: column;
}

.field {
    display: flex;
    align-items: center;
    margin-top: 18px;
    justify-content: left;
}

.submit-button {
    border: none;
    border-radius: 20px;
    margin-top: 15px;
    background-color: #9B112E; 
    color: #ffffff; 
    padding: 10px 20px; 
    text-align: right;
    display: inline-block;
}

.radio-option {
    display: inline-block;  
    margin-left: 50px;
    margin-right: 22px; 
    font-size: 20px;
}

